--- a/src/app/styles/Nav.module.css
+++ b/src/app/styles/Nav.module.css
@@ -1,7 +1,8 @@
 
 .nav {
-    background-color: #333;
-    color: white;
+    background-color: rgba(255, 255, 255, 0.8); 
+    backdrop-filter: blur(10px); 
+    color: #333; 
     padding: 1rem;
     display: flex;
     justify-content: center;
@@ -11,6 +12,7 @@
     left: 0;
     width: 100%;
     z-index: 1005;
+    box-shadow: 0 6px 6px rgba(0, 0, 0, 0.5); 
 }
 
 .container {
@@ -25,6 +27,8 @@
 .logo {
     font-size: 1.5rem;
     font-weight: bold;
+    text-shadow: 2px 4px 4px rgba(0, 0, 0, 0.5);  
+
 }
 
 @media (max-width: 768px) {
