--- a/src/app/styles/EditBanner.module.css
+++ b/src/app/styles/EditBanner.module.css
@@ -14,7 +14,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    height: 100vh;
+    height: 100%;
     width: 100vw;
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
