--- a/src/app/styles/Banner.module.css
+++ b/src/app/styles/Banner.module.css
@@ -25,7 +25,7 @@
     height:100%;
     row-gap: 2rem;
     column-gap:5rem;
-    background-color: #ff7e67;
+    background-color:rgb(0, 170, 255);
   }
   
   .banner:hover {
@@ -68,7 +68,7 @@
   
   @media (min-width: 768px) {
     .banner {
-      width: 40%; 
+      width: 25%; 
     }
   }
   
