--- a/src/app/styles/Banner.module.css
+++ b/src/app/styles/Banner.module.css
@@ -25,7 +25,7 @@
     height:100%;
     row-gap: 2rem;
     column-gap:5rem;
-    background-color:rgb(0, 170, 255);
+    background-color:rgb(77, 195, 255);
   }
   
   .banner:hover {
@@ -39,9 +39,9 @@
   }
  
   .ctaButton {
-    background: #ff6347;
-    
-    border: none;
+    background: rgb(4, 153, 227);
+    border: 2px solid black;
+   
     padding: 10px 20px;
     color: #fff;
     border-radius: 5px;
