--- a/src/app/styles/Banner.module.css
+++ b/src/app/styles/Banner.module.css
@@ -25,7 +25,7 @@
     height:100%;
     row-gap: 2rem;
     column-gap:5rem;
-    background-color:rgb(77, 195, 255);
+    /* background-color:rgb(77, 195, 255); */
   }
   
   .banner:hover {
